--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-08-31 10:33+0200\n"
+"POT-Creation-Date: 2016-08-31 11:29+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -382,7 +382,8 @@ msgstr "Deadline: "
 #: rpocore/templates/pages/statementpage.html:28
 msgid "These statements are required for the process to continue."
 msgstr ""
-"Diese Stellungnahmen werden benötigt, damit der Prozess fortgesetzt werden kann."
+"Diese Stellungnahmen werden benötigt, damit der Prozess fortgesetzt werden "
+"kann."
 
 #: rpocore/templates/pages/statementpage.html:39
 msgid "Statement pending"
@@ -393,8 +394,8 @@ msgid ""
 "These statements are not required for the process to continue but are "
 "interesting nonetheless."
 msgstr ""
-"Diese Stellungnahmen werden nicht für den Fortgang des Prozesses benötigt, sind "
-"jedoch in jedem Fall interessant."
+"Diese Stellungnahmen werden nicht für den Fortgang des Prozesses benötigt, "
+"sind jedoch in jedem Fall interessant."
 
 #: rpocore/templates/pages/statementpage.html:64
 msgid ""
@@ -405,8 +406,8 @@ msgid ""
 "                "
 msgstr ""
 "\n"
-"               Bitte verstehe, dass keine Stellungnahmen von Einzelpersonen hier "
-"angezeigt werden können. Wenn du eine Organisation vertrittst\n"
+"               Bitte verstehe, dass keine Stellungnahmen von Einzelpersonen "
+"hier angezeigt werden können. Wenn du eine Organisation vertrittst\n"
 "               und deren Stellungnahme einreichen möchtest, fahre fort.\n"
 "               "
 
@@ -484,10 +485,9 @@ msgstr "Unterstütze RPO 2016"
 msgid "The link you clicked is no longer valid."
 msgstr "Der von dir angeklickte Link ist nicht länger gültig."
 
-#: rposite/settings.py:115
-msgid "English"
-msgstr "Englisch"
-
 #: rposite/settings.py:116
 msgid "German"
 msgstr "Deutsch"
+
+#~ msgid "English"
+#~ msgstr "Englisch"
