[Core] Added missing gendering
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-16 12:26+0200\n"
+"POT-Creation-Date: 2016-09-16 12:41+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Last-Translator: Jim Martens <github@2martens.de>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -43,7 +43,7 @@ msgid ""
 "This statement will appear on the list of supporters together with your name."
 msgstr ""
 "Dieses Statement wird zusammen mit deinem Namen auf der Seite der "
-"Unterstützer erscheinen."
+"Unterstützer*Innen erscheinen."
 
 #: rpocore/models.py:37
 msgid "Support anonymously"
@@ -53,7 +53,7 @@ msgstr "Anonym unterstützen"
 msgid "If checked your name will not appear on the list of supporters."
 msgstr ""
 "Wenn du dies ankreuzt, erscheint dein Name nicht auf der Seite der "
-"Unterstützer"
+"Unterstützer*Innen"
 
 #: rpocore/models.py:42
 msgid "Additional information"
@@ -358,7 +358,8 @@ msgstr "Seite ansehen"
 
 #: rpocore/templates/admin/login.html:24
 msgid "You don't have permission to access the admin for this site."
-msgstr "Du hast keine Berechtigung den Adminbereich für diese Website zu betreten."
+msgstr ""
+"Du hast keine Berechtigung den Adminbereich für diese Website zu betreten."
 
 #: rpocore/templates/admin/login.html:31
 msgid "Username or email:"
@@ -434,8 +435,8 @@ msgid ""
 " for exact phrases, + to make a word or phrase required, and - to exclude a "
 "word or phrase."
 msgstr ""
-" für genaue Zeichenfolgen, + um ein Wort oder eine Zeichenkette vorauszusetzen, und - um ein Wort "
-"oder eine Zeichenkette auszuschließen."
+" für genaue Zeichenfolgen, + um ein Wort oder eine Zeichenkette "
+"vorauszusetzen, und - um ein Wort oder eine Zeichenkette auszuschließen."
 
 #: rpocore/templates/pages/index.html:86
 msgid "Aktuelle Phase: "
@@ -474,7 +475,8 @@ msgid ""
 msgstr ""
 "\n"
 "               Bitte verstehe, dass keine Stellungnahmen von Einzelpersonen "
-"hier angezeigt werden können. Wenn du eine Organisation (z.B. AStA, FSR) vertrittst\n"
+"hier angezeigt werden können. Wenn du eine Organisation (z.B. AStA, FSR) "
+"vertrittst\n"
 "               und deren Stellungnahme einreichen möchtest, fahre fort.\n"
 "               "
 
