[Core] Added missing fullstop
Signed-off-by: Jim Martens <github@2martens.de>

--- a/src/locale/de/LC_MESSAGES/django.po
+++ b/src/locale/de/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-09-26 17:10+0200\n"
+"POT-Creation-Date: 2016-09-27 14:03+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Jim Martens <github@2martens.de>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -54,7 +54,7 @@ msgstr "Anonym unterstützen"
 msgid "If checked your name will not appear on the list of supporters."
 msgstr ""
 "Wenn Sie dies ankreuzen, erscheint Ihr Name nicht auf der Seite der "
-"Unterstützer*Innen"
+"Unterstützer*Innen."
 
 #: rpocore/models.py:42
 msgid "Additional information"
@@ -258,8 +258,9 @@ msgid ""
 "<p>You can also <a href=\"%(password_reset_url)s?next=%(profile_update_url)s"
 "\">reset your password</a> if you've forgotten it.</p>"
 msgstr ""
-"<p>Sie können ebenfalls Ihr <a href=\"%(password_reset_url)s?next=%(profile_update_url)s"
-"\">Passwort zurücksetzen</a>, wenn Sie es vergessen haben.</p>"
+"<p>Sie können ebenfalls Ihr <a href=\"%(password_reset_url)s?next="
+"%(profile_update_url)s\">Passwort zurücksetzen</a>, wenn Sie es vergessen "
+"haben.</p>"
 
 #: rpocore/templates/accounts/account_signup.html:7
 msgid "You already support the RPO 2016 campaign."
@@ -280,8 +281,8 @@ msgstr ""
 "eingegebenen Informationen werden hauptsächlich genutzt, um Ihre "
 "Unterstützung auf der\n"
 "                   Liste der Unterstützer*Innen anzuzeigen. Die Email wird "
-"benötigt, um Ihre Unterstützung zu verifizieren. Wir möchten Sie bitten "
-"eine von der Uni\n"
+"benötigt, um Ihre Unterstützung zu verifizieren. Wir möchten Sie bitten eine "
+"von der Uni\n"
 "                   bereitgestellte E-Mail-Adresse zu nutzen, um Missbrauch "
 "so gut es geht zu reduzieren."
 
@@ -303,8 +304,8 @@ msgstr ""
 "                   können Sie nach der Unterstützung lediglich Ihr Profil "
 "editieren und damit verbunden die zur Unterstützung bereitgestellten "
 "Informationen.\n"
-"                   Beispielsweise können Sie zunächst anonym unterstützen und "
-"später entscheiden auch mit Ihrem Namen zu unterstützen."
+"                   Beispielsweise können Sie zunächst anonym unterstützen "
+"und später entscheiden auch mit Ihrem Namen zu unterstützen."
 
 #: rpocore/templates/accounts/account_signup.html:27
 msgid ""
@@ -499,9 +500,9 @@ msgid ""
 "                "
 msgstr ""
 "\n"
-"               Bitte verstehen Sie, dass hier keine Stellungnahmen von Einzelpersonen "
-"angezeigt werden können. Wenn Sie eine Organisation (z.B. AStA, FSR) "
-"vertreten\n"
+"               Bitte verstehen Sie, dass hier keine Stellungnahmen von "
+"Einzelpersonen angezeigt werden können. Wenn Sie eine Organisation (z.B. "
+"AStA, FSR) vertreten\n"
 "               und deren Stellungnahme einreichen möchten, fahren Sie fort.\n"
 "               "
 
